feat(google_logout):google_sign_out

--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,28 @@
   <h1>Google Sign-in</h1>
   <hr>
 
-  <div id="g_id_onload" data-client_id="179664505754-d16quc62iq58mflo4g6v8ffi2nqnvbeg.apps.googleusercontent.com"
-    data-auto_prompt="false" data-callback="handleCredentialResponse"></div>
+  <div 
+    id="g_id_onload" 
+    data-client_id="179664505754-d16quc62iq58mflo4g6v8ffi2nqnvbeg.apps.googleusercontent.com"
+    data-auto_prompt="false" 
+    data-callback="handleCredentialResponse"
+  ></div>
 
-  <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
-    data-shape="rectangular" data-logo_alignment="left"></div>
-
-  <script src="https://accounts.google.com/gsi/client" async></script>
+  <div 
+    class="g_id_signin" 
+    data-type="standard" 
+    data-size="large" 
+    data-theme="outline" 
+    data-text="sign_in_with"
+    data-shape="rectangular" 
+    data-logo_alignment="left"
+  ></div>
+  
+  <button id="g_id_signout">Sign Out</button>
 
   <script>
     function handleCredentialResponse(response) {
-      //* GOOGLE TOkEN
       const googleID = { id_token: response.credential };
-
       fetch('http://localhost:8080/api/auth/google', {
         method: 'POST',
         headers: {
@@ -33,11 +42,26 @@
       })
         .then(resp => resp.json())
         .then(resp => {
-          console.log(resp)
+          console.log(resp);
+          localStorage.setItem('email', resp.user.email);
         })
         .catch(console.warn)
     }
+
+    const button = document.getElementById('g_id_signout');
+    button.onclick = async() => {
+      console.log(google.accounts.id)
+      google.accounts.id.disableAutoSelect()
+      google.accounts.id.revoke(localStorage.getItem('email'), done => {
+        console.log('consent revoked');
+        localStorage.clear()
+        location.reload()
+      });
+    }
   </script>
+
+  <script src="https://accounts.google.com/gsi/client" async></script>
+
 </body>
 
 </html>
